--- a/web/views/@default/@layout_popup.html
+++ b/web/views/@default/@layout_popup.html
@@ -10,7 +10,6 @@
     <link rel="shortcut icon" href="/ui/image/{$.teaFaviconFileId}"/>
     {$end}
 	<link rel="stylesheet" type="text/css" href="/_/@default/@layout_popup.css" media="all"/>
-
 	<link rel="stylesheet" type="text/css" href="/css/semantic.iframe.min.css?v=bRafhK" media="all"/>
 	{$TEA.VUE}
 	<link rel="stylesheet" type="text/css" href="/_/@default/@layout_override.css" media="all"/>
@@ -21,20 +20,8 @@
 	<script type="text/javascript" src="/js/sweetalert2/dist/sweetalert2.all.min.js"></script>
 	<script type="text/javascript" src="/js/date.tea.js"></script>
     <script type="text/javascript" src="/js/langs/{$.teaLang}.js?v=1.2.0"></script>
-	<style type="text/css">
-        .main {
-            left: 0;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            overflow-y: auto;
-            padding-bottom: 0;
-        }
-
-        .main::-webkit-scrollbar {
-            width: 4px;
-        }
-	</style>
+	<link rel="stylesheet" type="text/css" href="/css/custom/layout.css" media="all" />
+	<style type="text/css">body{background-color:#fff}.main{left:0;top:0;bottom:0;right:0;overflow-y:auto;padding-bottom:0}.main::-webkit-scrollbar{width:4px}</style>
 	<script type="text/javascript">
 		window.IS_POPUP = true
 	</script>
