--- a/web/views/@default/dashboard/boards/dns.html
+++ b/web/views/@default/dashboard/boards/dns.html
@@ -10,29 +10,35 @@
 </div>
 
 <div v-show="!isLoading">
-    <columns-grid>
-        <div class="ui column">
-            <h4>域名<link-icon href="/ns/domains"></link-icon></h4>
-            <div class="value"><span>{{board.countDomains}}</span>个</div>
-        </div>
-        <div class="ui column">
-            <h4>记录<link-icon href="/ns/domains"></link-icon></h4>
-            <div class="value"><span>{{board.countRecords}}</span>个</div>
-        </div>
-        <div class="ui column">
-            <h4>集群<link-icon href="/ns/clusters"></link-icon></h4>
-            <div class="value"><span>{{board.countClusters}}</span>个</div>
-        </div>
-        <div class="ui column">
-            <h4>节点<link-icon href="/ns/clusters"></link-icon></h4>
-            <div class="value"><span>{{board.countNodes}}</span>
-                <span v-if="board.countOfflineNodes > 0" style="font-size: 1em">
-                    / <a href="/ns/clusters"><span class="red" style="font-size: 1em">{{board.countOfflineNodes}}离线</span></a>
-                </span>
-                <span v-else style="font-size: 1em">个</span>
-            </div>
-        </div>
-    </columns-grid>
+	<div class="ui all-chart">
+		<div class="ui four columns grid counter-chart">
+			<div class="ui column" style="border-bottom:1px rgba(0,0,0,0.1) solid">
+				<a href="/ns/domains" class="ui cologe"><i class="ui icon globe"></i></a>
+				<h4>域名</h4>
+				<div class="value"><span>{{board.countDomains}}</span>个</div>
+			</div>
+			<div class="ui column" style="border-bottom:1px rgba(0,0,0,0.1) solid">
+				<a href="/ns/domains" class="ui cologe"><i class="ui icon cubes"></i></a>
+				<h4>记录</h4>
+				<div class="value"><span>{{board.countRecords}}</span>个</div>
+			</div>
+			<div class="ui column" style="border-bottom:1px rgba(0,0,0,0.1) solid">
+				<a href="/ns/clusters" class="ui cologe"><i class="ui icon clone"></i></a>
+				<h4>集群</h4>
+				<div class="value"><span>{{board.countClusters}}</span>个</div>
+			</div>
+			<div class="ui column" style="border-bottom:1px rgba(0,0,0,0.1) solid">
+				<a href="/ns/clusters" class="ui cologe"><i class="ui icon cloud"></i></a>
+				<h4>节点</h4>
+				<div class="value"><span>{{board.countNodes}}</span>
+					<span v-if="board.countOfflineNodes > 0" style="font-size: 1em">
+						/ <a href="/ns/clusters"><span class="red" style="font-size: 1em">{{board.countOfflineNodes}}离线</span></a>
+					</span>
+					<span v-else style="font-size: 1em">个</span>
+				</div>
+			</div>
+		</div>
+	</div>
 
     <chart-columns-grid>
         <div class="ui column">
