--- a/web/views/@default/dashboard/boards/user.html
+++ b/web/views/@default/dashboard/boards/user.html
@@ -2,33 +2,39 @@
 {$template "menu"}
 {$template "/echarts"}
 
-<columns-grid>
-    <div class="ui column">
-        <h4>用户总数<link-icon href="/users"></link-icon></h4>
-        <div class="value"><span>{{board.totalUsers}}</span>
-            <span v-if="board.countVerifyingUsers > 0" style="font-size: 1em">
-                / <a href="/users?verifying=1"><span class="red" style="font-size: 1em">{{board.countVerifyingUsers}}待审核</span></a>
-            </span>
-        </div>
-    </div>
-    <div class="ui column">
-        <h4>今日新增<link-icon href="/users"></link-icon></h4>
-        <div class="value"><span>{{board.countTodayUsers}}</span></div>
-    </div>
-    <div class="ui column">
-        <h4>本周新增<link-icon href="/users"></link-icon></h4>
-        <div class="value"><span>{{board.countWeeklyUsers}}</span></div>
-    </div>
-    <div class="ui column">
-        <h4>用户节点<link-icon href="/settings/userNodes"></link-icon></h4>
-        <div class="value"><span>{{board.countUserNodes}}</span>
-            <span v-if="board.countOfflineUserNodes > 0" style="font-size: 1em">
-                / <a href="/settings/userNodes"><span class="red" style="font-size: 1em">{{board.countOfflineUserNodes}}离线</span></a>
-            </span>
-            <span v-else style="font-size: 1em">个</span>
-        </div>
-    </div>
-</columns-grid>
+<div class="ui all-chart">
+	<div class="ui four columns grid counter-chart">
+		<div class="ui column" style="border-bottom:1px rgba(0,0,0,0.1) solid">
+			<a href="/users" class="ui cologe"><i class="ui icon users"></i></a>
+			<h4>用户总数</h4>
+			<div class="value"><span>{{board.totalUsers}}</span>
+				<span v-if="board.countVerifyingUsers > 0" style="font-size: 1em">
+					/ <a href="/users?verifying=1"><span class="red" style="font-size: 1em">{{board.countVerifyingUsers}}待审核</span></a>
+				</span>
+			</div>
+		</div>
+		<div class="ui column" style="border-bottom:1px rgba(0,0,0,0.1) solid">
+			<a href="/users" class="ui cologe"><i class="ui icon icon27"></i></a>
+			<h4>今日新增</h4>
+			<div class="value"><span>{{board.countTodayUsers}}</span></div>
+		</div>
+		<div class="ui column" style="border-bottom:1px rgba(0,0,0,0.1) solid">
+			<a href="/users" class="ui cologe"><i class="ui icon icon28"></i></a>
+			<h4>本周新增</h4>
+			<div class="value"><span>{{board.countWeeklyUsers}}</span></div>
+		</div>
+		<div class="ui column" style="border-bottom:1px rgba(0,0,0,0.1) solid">
+			<a href="/settings/userNodes" class="ui cologe"><i class="ui icon cloud"></i></a>
+			<h4>用户节点</h4>
+			<div class="value"><span>{{board.countUserNodes}}</span>
+				<span v-if="board.countOfflineUserNodes > 0" style="font-size: 1em">
+					/ <a href="/settings/userNodes"><span class="red" style="font-size: 1em">{{board.countOfflineUserNodes}}离线</span></a>
+				</span>
+				<span v-else style="font-size: 1em">个</span>
+			</div>
+		</div>
+	</div>
+</div>
 
 <chart-columns-grid>
     <div class="ui column">
